// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSS Notes expect notes to be drawn 1`] = `
<body>
  <div
    id="main"
  >
    <div>
      <div>
        <div
          class="timeline-title"
          id="title-notes-2020-12-16"
        >
          Notes
        </div>
        <div
          class="timeline-chart"
          id="notes-2020-12-16"
        >
          <ul>
            <li
              style="width: 16px; margin-left: 192px;"
            >
              <div
                aria-controls="note-2020-11-16T09:30:00"
                aria-haspopup="dialog"
                class="timeline-event timeline-note"
                id="note-button-2020-11-16T09:30:00"
                type="button"
              >
                <i
                  class="fas fa-sticky-note"
                />
              </div>
            </li>
            <li
              style="width: 16px; margin-left: 267.33333333333337px;"
            >
              <div
                aria-controls="note-2020-11-16T10:55:00"
                aria-haspopup="dialog"
                class="timeline-event timeline-note"
                id="note-button-2020-11-16T10:55:00"
                type="button"
              >
                <i
                  class="fas fa-sticky-note"
                />
              </div>
            </li>
            <li
              style="width: 16px; margin-left: 267.33333333333337px;"
            >
              <div
                aria-controls="note-2020-11-16T12:20:00"
                aria-haspopup="dialog"
                class="timeline-event timeline-note"
                id="note-button-2020-11-16T12:20:00"
                type="button"
              >
                <i
                  class="fas fa-sticky-note"
                />
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="note-desc-2020-11-16T12:20:00"
    aria-hidden="true"
    aria-modal="true"
    class="c-dialog"
    id="note-2020-11-16T12:20:00"
    role="[object HTMLDivElement]"
    tabindex="-1"
  >
    <div
      class="c-dialog__box"
    >
      <div
        aria-dismiss="dialog"
        aria-label="Close"
        type="button"
      >
        X
      </div>
      <div
        id="note-desc-2020-11-16T12:20:00"
      >
        <div
          class="note"
        >
          <h4
            id="202011161220"
          >
            2020-11-16 12:20
          </h4>
          

          <h1
            id="note"
          >
            Note
          </h1>
          

          <h2
            id="troisimenote"
          >
            Troisième note
          </h2>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="note-desc-2020-11-16T10:55:00"
    aria-hidden="true"
    aria-modal="true"
    class="c-dialog"
    id="note-2020-11-16T10:55:00"
    role="[object HTMLDivElement]"
    tabindex="-1"
  >
    <div
      class="c-dialog__box"
    >
      <div
        aria-dismiss="dialog"
        aria-label="Close"
        type="button"
      >
        X
      </div>
      <div
        id="note-desc-2020-11-16T10:55:00"
      >
        <div
          class="note"
        >
          <h4
            id="202011161055"
          >
            2020-11-16 10:55
          </h4>
          

          <h1
            id="note"
          >
            Note
          </h1>
          

          <h2
            id="secondenote"
          >
            Seconde note
          </h2>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="note-desc-2020-11-16T09:30:00"
    aria-hidden="true"
    aria-modal="true"
    class="c-dialog"
    id="note-2020-11-16T09:30:00"
    role="[object HTMLDivElement]"
    tabindex="-1"
  >
    <div
      class="c-dialog__box"
    >
      <div
        aria-dismiss="dialog"
        aria-label="Close"
        type="button"
      >
        X
      </div>
      <div
        id="note-desc-2020-11-16T09:30:00"
      >
        <div
          class="note"
        >
          <h4
            id="202011160930"
          >
            2020-11-16 09:30
          </h4>
          

          <h1
            id="note"
          >
            Note
          </h1>
          

          <h2
            id="premirenote"
          >
            Première note
          </h2>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CSS Notes expect previous drawn notes to be removed 1`] = `
<body>
  <div
    id="main"
  >
    <div>
      <div>
        <div
          class="timeline-title"
          id="title-notes-2020-12-16"
        >
          Notes
        </div>
        <div
          class="timeline-chart"
          id="notes-2020-12-16"
        >
          <ul>
            <li
              style="width: 16px; margin-left: 192px;"
            >
              <div
                aria-controls="note-2020-11-16T09:30:00"
                aria-haspopup="dialog"
                class="timeline-event timeline-note"
                id="note-button-2020-11-16T09:30:00"
                type="button"
              >
                <i
                  class="fas fa-sticky-note"
                />
              </div>
            </li>
            <li
              style="width: 16px; margin-left: 267.33333333333337px;"
            >
              <div
                aria-controls="note-2020-11-16T10:55:00"
                aria-haspopup="dialog"
                class="timeline-event timeline-note"
                id="note-button-2020-11-16T10:55:00"
                type="button"
              >
                <i
                  class="fas fa-sticky-note"
                />
              </div>
            </li>
            <li
              style="width: 16px; margin-left: 267.33333333333337px;"
            >
              <div
                aria-controls="note-2020-11-16T12:20:00"
                aria-haspopup="dialog"
                class="timeline-event timeline-note"
                id="note-button-2020-11-16T12:20:00"
                type="button"
              >
                <i
                  class="fas fa-sticky-note"
                />
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="note-desc-2020-11-16T12:20:00"
    aria-hidden="true"
    aria-modal="true"
    class="c-dialog"
    id="note-2020-11-16T12:20:00"
    role="[object HTMLDivElement]"
    tabindex="-1"
  >
    <div
      class="c-dialog__box"
    >
      <div
        aria-dismiss="dialog"
        aria-label="Close"
        type="button"
      >
        X
      </div>
      <div
        id="note-desc-2020-11-16T12:20:00"
      >
        <div
          class="note"
        >
          <h4
            id="202011161220"
          >
            2020-11-16 12:20
          </h4>
          

          <h1
            id="note"
          >
            Note
          </h1>
          

          <h2
            id="troisimenote"
          >
            Troisième note
          </h2>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="note-desc-2020-11-16T10:55:00"
    aria-hidden="true"
    aria-modal="true"
    class="c-dialog"
    id="note-2020-11-16T10:55:00"
    role="[object HTMLDivElement]"
    tabindex="-1"
  >
    <div
      class="c-dialog__box"
    >
      <div
        aria-dismiss="dialog"
        aria-label="Close"
        type="button"
      >
        X
      </div>
      <div
        id="note-desc-2020-11-16T10:55:00"
      >
        <div
          class="note"
        >
          <h4
            id="202011161055"
          >
            2020-11-16 10:55
          </h4>
          

          <h1
            id="note"
          >
            Note
          </h1>
          

          <h2
            id="secondenote"
          >
            Seconde note
          </h2>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="note-desc-2020-11-16T09:30:00"
    aria-hidden="true"
    aria-modal="true"
    class="c-dialog"
    id="note-2020-11-16T09:30:00"
    role="[object HTMLDivElement]"
    tabindex="-1"
  >
    <div
      class="c-dialog__box"
    >
      <div
        aria-dismiss="dialog"
        aria-label="Close"
        type="button"
      >
        X
      </div>
      <div
        id="note-desc-2020-11-16T09:30:00"
      >
        <div
          class="note"
        >
          <h4
            id="202011160930"
          >
            2020-11-16 09:30
          </h4>
          

          <h1
            id="note"
          >
            Note
          </h1>
          

          <h2
            id="premirenote"
          >
            Première note
          </h2>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CSS Timeline expect notes to be drawn 1`] = `
<body>
  <div
    id="main"
  >
    <div>
      <div>
        <div
          class="timeline-header"
          id="title-notes-2020-12-16"
        >
          Notes
        </div>
        <div
          class="timeline-chart"
          id="notes-2020-12-16"
        >
          <ul>
            <li
              style="width: 16px; margin-left: 192px;"
            >
              <div
                aria-controls="note-2020-11-16T09:30:00"
                aria-haspopup="dialog"
                class="timeline-event timeline-note"
                id="note-button-2020-11-16T09:30:00"
                type="button"
              >
                <i
                  class="fas fa-sticky-note"
                />
              </div>
            </li>
            <li
              style="width: 16px; margin-left: 267.33333333333337px;"
            >
              <div
                aria-controls="note-2020-11-16T10:55:00"
                aria-haspopup="dialog"
                class="timeline-event timeline-note"
                id="note-button-2020-11-16T10:55:00"
                type="button"
              >
                <i
                  class="fas fa-sticky-note"
                />
              </div>
            </li>
            <li
              style="width: 16px; margin-left: 267.33333333333337px;"
            >
              <div
                aria-controls="note-2020-11-16T12:20:00"
                aria-haspopup="dialog"
                class="timeline-event timeline-note"
                id="note-button-2020-11-16T12:20:00"
                type="button"
              >
                <i
                  class="fas fa-sticky-note"
                />
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="note-desc-2020-11-16T12:20:00"
    aria-hidden="true"
    aria-modal="true"
    class="c-dialog"
    id="note-2020-11-16T12:20:00"
    role="[object HTMLDivElement]"
    tabindex="-1"
  >
    <div
      class="c-dialog__box"
    >
      <div
        aria-dismiss="dialog"
        aria-label="Close"
        type="button"
      >
        X
      </div>
      <div
        id="note-desc-2020-11-16T12:20:00"
      >
        <div
          class="note"
        >
          <h4
            id="202011161220"
          >
            2020-11-16 12:20
          </h4>
          

          <h1
            id="note"
          >
            Note
          </h1>
          

          <h2
            id="troisimenote"
          >
            Troisième note
          </h2>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="note-desc-2020-11-16T10:55:00"
    aria-hidden="true"
    aria-modal="true"
    class="c-dialog"
    id="note-2020-11-16T10:55:00"
    role="[object HTMLDivElement]"
    tabindex="-1"
  >
    <div
      class="c-dialog__box"
    >
      <div
        aria-dismiss="dialog"
        aria-label="Close"
        type="button"
      >
        X
      </div>
      <div
        id="note-desc-2020-11-16T10:55:00"
      >
        <div
          class="note"
        >
          <h4
            id="202011161055"
          >
            2020-11-16 10:55
          </h4>
          

          <h1
            id="note"
          >
            Note
          </h1>
          

          <h2
            id="secondenote"
          >
            Seconde note
          </h2>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="note-desc-2020-11-16T09:30:00"
    aria-hidden="true"
    aria-modal="true"
    class="c-dialog"
    id="note-2020-11-16T09:30:00"
    role="[object HTMLDivElement]"
    tabindex="-1"
  >
    <div
      class="c-dialog__box"
    >
      <div
        aria-dismiss="dialog"
        aria-label="Close"
        type="button"
      >
        X
      </div>
      <div
        id="note-desc-2020-11-16T09:30:00"
      >
        <div
          class="note"
        >
          <h4
            id="202011160930"
          >
            2020-11-16 09:30
          </h4>
          

          <h1
            id="note"
          >
            Note
          </h1>
          

          <h2
            id="premirenote"
          >
            Première note
          </h2>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CSS Timeline expect previous drawn notes to be removed 1`] = `
<body>
  <div
    id="main"
  >
    <div>
      <div>
        <div
          class="timeline-header"
          id="title-notes-2020-12-16"
        >
          Notes
        </div>
        <div
          class="timeline-chart"
          id="notes-2020-12-16"
        >
          <ul>
            <li
              style="width: 16px; margin-left: 192px;"
            >
              <div
                aria-controls="note-2020-11-16T09:30:00"
                aria-haspopup="dialog"
                class="timeline-event timeline-note"
                id="note-button-2020-11-16T09:30:00"
                type="button"
              >
                <i
                  class="fas fa-sticky-note"
                />
              </div>
            </li>
            <li
              style="width: 16px; margin-left: 267.33333333333337px;"
            >
              <div
                aria-controls="note-2020-11-16T10:55:00"
                aria-haspopup="dialog"
                class="timeline-event timeline-note"
                id="note-button-2020-11-16T10:55:00"
                type="button"
              >
                <i
                  class="fas fa-sticky-note"
                />
              </div>
            </li>
            <li
              style="width: 16px; margin-left: 267.33333333333337px;"
            >
              <div
                aria-controls="note-2020-11-16T12:20:00"
                aria-haspopup="dialog"
                class="timeline-event timeline-note"
                id="note-button-2020-11-16T12:20:00"
                type="button"
              >
                <i
                  class="fas fa-sticky-note"
                />
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="note-desc-2020-11-16T12:20:00"
    aria-hidden="true"
    aria-modal="true"
    class="c-dialog"
    id="note-2020-11-16T12:20:00"
    role="[object HTMLDivElement]"
    tabindex="-1"
  >
    <div
      class="c-dialog__box"
    >
      <div
        aria-dismiss="dialog"
        aria-label="Close"
        type="button"
      >
        X
      </div>
      <div
        id="note-desc-2020-11-16T12:20:00"
      >
        <div
          class="note"
        >
          <h4
            id="202011161220"
          >
            2020-11-16 12:20
          </h4>
          

          <h1
            id="note"
          >
            Note
          </h1>
          

          <h2
            id="troisimenote"
          >
            Troisième note
          </h2>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="note-desc-2020-11-16T10:55:00"
    aria-hidden="true"
    aria-modal="true"
    class="c-dialog"
    id="note-2020-11-16T10:55:00"
    role="[object HTMLDivElement]"
    tabindex="-1"
  >
    <div
      class="c-dialog__box"
    >
      <div
        aria-dismiss="dialog"
        aria-label="Close"
        type="button"
      >
        X
      </div>
      <div
        id="note-desc-2020-11-16T10:55:00"
      >
        <div
          class="note"
        >
          <h4
            id="202011161055"
          >
            2020-11-16 10:55
          </h4>
          

          <h1
            id="note"
          >
            Note
          </h1>
          

          <h2
            id="secondenote"
          >
            Seconde note
          </h2>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="note-desc-2020-11-16T09:30:00"
    aria-hidden="true"
    aria-modal="true"
    class="c-dialog"
    id="note-2020-11-16T09:30:00"
    role="[object HTMLDivElement]"
    tabindex="-1"
  >
    <div
      class="c-dialog__box"
    >
      <div
        aria-dismiss="dialog"
        aria-label="Close"
        type="button"
      >
        X
      </div>
      <div
        id="note-desc-2020-11-16T09:30:00"
      >
        <div
          class="note"
        >
          <h4
            id="202011160930"
          >
            2020-11-16 09:30
          </h4>
          

          <h1
            id="note"
          >
            Note
          </h1>
          

          <h2
            id="premirenote"
          >
            Première note
          </h2>
        </div>
      </div>
    </div>
  </div>
</body>
`;
